--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <h3 class="fs-2 text-body-emphasis text-white">Programming</h3>
                         <p class="text-white">With over 3 years of experience, I specialize in creating efficient, scalable solutions using languages such as Python, C#, and SQL. I have challenged myself to design and develop many unique coding projects. I have a solid foundation in full stack development, and I’m passionate about optimizing the user experience through clean, maintainable code.</p>
                         <div class="mt-4">
-                            <a class="btn btn-xl btn-outline-light" href="https://github.com/orionmccree">
+                            <a class="btn btn-xl btn-outline-light" target="_blank" href="https://github.com/orionmccree">
                                 <i class="fas fa-download me-2"></i>
                                 Some of my Projects
                             </a>
@@ -94,7 +94,7 @@
                         <h3 class="fs-2 text-body-emphasis text-white">Video Design</h3>
                         <p class="text-white">I bring over two years of hands-on experience in video editing, crafting engaging and visually compelling content for various platforms. I’m proficient in all of the tools within Adobe Creative Suite, Davinci Resolve, and Final Cut Pro. I can transform raw footage into polished, professional videos that resonate with audiences and enhance brand storytelling.</p>
                         <div class="mt-4">
-                            <a class="btn btn-xl btn-outline-light" href="https://www.youtube.com/watch?v=njosY3L8F70">
+                            <a class="btn btn-xl btn-outline-light" target="_blank" href="https://www.youtube.com/watch?v=njosY3L8F70">
                                 <i class="fas fa-download me-2"></i>
                                 My Professional Video
                             </a>
@@ -109,7 +109,7 @@
                         <h3 class="fs-2 text-body-emphasis text-white">Social Media</h3>
                         <p class="text-white">I have a proven track record of managing social media accounts for businesses and individuals, growing their online presence through strategic content creation, audience engagement, and data-driven insights. I’m skilled at creating content that boosts visibility and fosters meaningful connections across platforms like Instagram, Twitter, and LinkedIn.</p>
                         <div class="mt-4">
-                            <a class="btn btn-xl btn-outline-light" href="https://www.linkedin.com/in/orion-mccree-9aa8a21a0/">
+                            <a class="btn btn-xl btn-outline-light" target="_blank" href="https://www.linkedin.com/in/orion-mccree-9aa8a21a0/">
                                 <i class="fas fa-download me-2"></i>
                                 My Social Media Impact
                             </a>
