Updated resume file

--- a/_posts/portfolio.html
+++ b/_posts/portfolio.html
@@ -59,7 +59,7 @@
                                     </p>
                                     <p class="portfolio-skills">Skills</p>
                                     <ul>
-                                        <li>Basic C# programing experience</li>
+                                        <li>Basic C# programming experience.</li>
                                         <li>Basic networking like web requests which help in understanding how to send and receive data over the internet using HTTP requests and managing responses. Furthermore, I explored formats like JSON when interacting with the Twitch API, learning how to serialize and deserialize data.</li>
                                         <li>Asynchronous execution to handle incoming chat messages and API requests concurrently, which is key in real-time applications.</li>
                                         <li>Processing Commands like text input from users (in this case, Twitch chat commands like !Game) and trigger responses based on those inputs.</li>
