--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </section>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" target="_blank" href="/assets/files/O McCree Resume.pdf">
+                    <a class="btn btn-xl btn-outline-light" target="_blank" href="../assets/files/O McCree Resume.pdf">
                         <i class="fas fa-download me-2"></i>
                         Download My Resume
                     </a>
